can-socket/tests/compile-fail/can_id_negative2.rs
fn main() {
	let _id = can_socket::id!(base: -2);
}
